# scope-graph

./: .gitignore  Cargo.toml  README.md  output.mmd  output.puml
data-parse/: .gitignore  Cargo.toml
data-parse/src/: error.rs  lib.rs  main.rs
data-parse/src/parsed/: label.rs  mod.rs  scope.rs
data-parse/src/raw/: data.rs  graph.rs  java.rs  mod.rs  query.rs
data-parse/test_data/: d-60398.json  d_50826-0.json  d_581-0.json
examples/: extension.sclang  first_example.sclang  one_decl.sclang  overwrite.sclang  record.sclang  simple.sclang  subtype.sclang
graph_bench/: .gitignore  README.md  plot_bench.py  plot_bench2.py  plot_pattern.py  plotlib.py  pyproject.toml  q-06-08-2025.json  q-16-09-2025.json  q-21-07-2025.json  q2.json  small-24-09-2025.json
graphing/: Cargo.toml
graphing/src/: color.rs  error.rs  lib.rs  renderer.rs
graphing/src/mermaid/: item.rs  mod.rs
graphing/src/mermaid/theme/: mod.rs
graphing/src/mermaid/theme/css/: mod.rs  props.rs
graphing/src/plantuml/: item.rs  mod.rs
graphing/src/plantuml/theme/: mod.rs
graphing/src/plantuml/theme/css/: mod.rs  props.rs
images/: Patterns.drawio
mermaid/: Cargo.toml
mermaid/src/: item.rs  lib.rs
mermaid/src/theme/: mod.rs
pattern-recog/: Cargo.toml
pattern-recog/src/: lib.rs  main.rs  stat.rs
pattern-recog/src/pattern/: chain.rs  circle.rs  diamond.rs  fanout.rs  mod.rs  tree.rs
plantuml/: Cargo.toml
plantuml/src/: color.rs  item.rs  lib.rs
plantuml/src/theme/: color.rs  css.rs  mod.rs
plantuml/src/theme/css/: mod.rs  props.rs
sclang/: Cargo.toml  README.md
sclang/src/: expr.rs  lib.rs  main.rs  types.rs
scope-graph/: Cargo.toml  regex_automata.md  regex_automata.mmd  sg_patterns.json
scope-graph/benches/: contains.rs  sg-construction.rs  sg-diamond.rs  sg-patterns.rs  sg-query.rs  sg-simple.rs
scope-graph/benches/common/: mod.rs
scope-graph/src/: data.rs  graph.rs  label.rs  lbl_regex.rs  lib.rs  main.rs  order.rs  path.rs  projection.rs  resolve.rs  scope.rs  scopegraph.rs  slides.rs
scope-graph/src/bench_util/: bench.rs  mod.rs
scope-graph/src/bottomup/: mod.rs
scope-graph/src/forward/: mod.rs  resolve.rs
scope-graph/src/generator/: mod.rs
scope-graph/src/graph/: base.rs  circle.rs  mod.rs  nodes.rs  resolve.rs
scope-graph/src/graph/bottomup/: mod.rs
scope-graph/src/graph/bottomup2/: mod.rs  reduced_path.rs
scope-graph/src/graph/cached/: cache.rs  mod.rs  resolve.rs
scope-graph/src/graph/forward/: mod.rs  resolve.rs
scope-graph/src/path/: mod.rs  segment.rs
scope-graph/src/regex/: dfs.rs  mod.rs  partial.rs
scope-graph/src/util/: display.rs  mod.rs
scope-graph/tests/: slides.rs  spoofax.rs  thesis.rs
sg-parse/: Cargo.toml
sg-parse/src/: main.rs
sg-parse/src/stlc/: data.rs  label.rs  mod.rs  types.rs
sketches/: slides_code
src/: label.rs  main.rs  scope.rs  scopegraph.rs
