[workspace]
resolver = "2"
members = [ "data-parse",
    "graphing",
    "sclang", # lil test language
    "scope-graph", # scope graph resolver
    "sg-parse", # parse using scope graph
    "pattern-recog",
]

[workspace.dependencies]
scopegraphs= "0.3.3"
winnow = {version = "0.6.20"}
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
