[workspace]
resolver = "2"
members = [
    "scope-graph", # scope graphs & queries
    "data-parse", # parsing of artifact data
    "pattern-recog", # pattern recognition for artifact data
    "graphing", # mmd, plantuml graphing utilities
]

[workspace.dependencies]
scopegraphs= "0.3.3"
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
