[package]
name = "data-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["display", "from"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["unbounded_depth"] }
rayon = "1.11.0"

graphing = { path = "../graphing", features = ["mermaid", "plantuml"] }
