[package]
name = "pattern-recog"
version = "0.1.0"
edition = "2024"

[dependencies]
vf2 = { version = "1.0.1" }
graphing = { path = "../graphing", features = ["plantuml", "mermaid"]}
data-parse = { path = "../data-parse" }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.18.0"
hashbrown = "0.15.4"