[package]
name = "scope-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
graphing = {path = "../graphing", features=["plantuml", "mermaid"]}
rand = {workspace = true}
tracing = {workspace = true, features = ["release_max_level_error"]}
tracing-subscriber = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}

[dev-dependencies]
criterion = "0.5.1"
scopegraphs = "0.3.3"

[[bench]]
name = "sg-query"
harness= false
