[package]
name = "scope-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
graphing = {path = "../graphing", features=["plantuml", "mermaid"]}
rand.workspace = true
tracing = {workspace = true, features = ["release_max_level_error"]}
tracing-subscriber = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true, features = ["derive", "rc"]}
scopegraphs = "0.3.3"
smallvec = "1.15.0"
indicatif = "0.18.0"
hashbrown = "0.15.4"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "sg-query"
harness= false

[[bench]]
name="sg-simple"
harness = false

[[bench]]
name = "sg-patterns"
harness = false
